Fixing overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,7 @@ body {
 
 .hero-section {
     background: linear-gradient(90deg, rgba(0, 0, 0, 0.55) 60%, rgba(0, 0, 0, 0.95) 100%), url('../img/hero.png') center/cover no-repeat;
-    /* min-height: vh; */
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
